fixed login button shrinking on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,4 +22,7 @@ h2 {
   font-size: 30px;
 }
 
+input, textarea{
+  -webkit-appearance: none;
+}
 
