--- a/client/src/pages/Profile/profile.scss
+++ b/client/src/pages/Profile/profile.scss
@@ -63,7 +63,7 @@ $screen-xl-min: 1200px;
   width: 80vw;
   @include sm {
     width: 100%;
-    padding-top: 12vh;
+    padding-top: 11vh;
   }
   margin: 0 auto;
 
